// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip does not render tooltip if not in tablet 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip does not render tooltip when tooltip type is not in tooltips array 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip renders correctly when type is in tooltips array 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied offsets 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied placement right 1`] = `
<View
  style={
    Object {
      "flexDirection": "row-reverse",
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied placement top 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;

exports[`Tooltip renders correctly with supplied width 1`] = `
<View
  style={
    Object {
      "zIndex": 9999,
    }
  }
>
  bar
</View>
`;
